syntax = "proto3";
package cosmos.checkpoint.v1beta1;

option go_package = "x/checkpoint/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "cosmos/types/checkpoint.proto";

// GenesisState defines the staking module's genesis state.
message GenesisState {
  // It defines the params
  cosmos.types.Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // BufferedCheckpoint defines the buffered checkpoint
  cosmos.types.Checkpoint buffered_checkpoint = 2
      [ (gogoproto.nullable) = true, (amino.dont_omitempty) = true ];

  uint64 last_no_a_c_k = 3 [ (amino.dont_omitempty) = true ];

  uint64 ack_count = 4 [ (amino.dont_omitempty) = true ];

  repeated cosmos.types.Checkpoint checkpoints = 5
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
